[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
panic = "abort"  # 禁用panic时栈展开

[profile.release]
panic = "abort"  # 禁用panic时栈展开

[dependencies]
bootloader = "0.9.3"
volatile = "0.4.5"
spin = "0.9.4"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["D:\\qemu\\qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]
