[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
panic = "abort"  # 禁用panic时栈展开

[profile.release]
panic = "abort"  # 禁用panic时栈展开

[dependencies]
bootloader = "0.9.3"
volatile = "0.4.5"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["D:\\qemu\\qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]
test-timeout = 100 # 设置运行 test 环境时的超时时间 (s)
test-args = [
    "-device","isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio",
    "-display", "none" # 不显示 qemu 的图形界面窗口
    ]
test-success-exit-code = 33